syntax = "proto3";
package vinyl;

message Query {
  string username = 1;
  string password = 2;
  string keyspace = 3;
  bytes file_descriptor = 4;
  repeated Table tables = 5;
  repeated Insert insertions = 6;
}

message Response {
  string error = 1;
}

message Insert {
  string table = 1;
  bytes data = 2;
}

message Table {
  map<string, FieldOptions> field_options = 1;
  string name = 2;
}
// from record_metadata_options.proto
message FieldOptions {
  bool primary_key = 2;
  message IndexOption {
    string type = 1; // [ default = "value" ]
    bool unique = 2;
    //    TODO: add back
    //   repeated Index.Option options = 3;
  }
  IndexOption index = 3;
}


// message RecordTypeUnion { Query _Query = 1; }
